# Volucris

./: .gitignore  .gitmodules  CMakeLists.txt  generate.bat
Assets/: simple_cube.fbx
Content/: cube  mat1  mat2  mat3  mat4  mat5  mat6
Content/Material/: default_mesh.frag  default_mesh.json  default_mesh.vert
Doc/: 一个小引擎.md  数据转换逻辑.xmind  继承结构.xmind  逻辑.xmind
Scripts/: build_assimp.bat  build_rttr.bat
Source/Editor/: CMakeLists.txt
Source/Editor/ContentBrowser/: add_resource_widget.cpp  add_resource_widget.h  asset_list_widget.cpp  asset_list_widget.h  content_browser_widget.cpp  content_browser_widget.h  material_loader.cpp  material_loader.h  mesh_loader.cpp  mesh_loader.h  path_tree_widget.cpp  path_tree_widget.h  texture_loader.cpp  texture_loader.h
Source/Editor/EditorEntry/: editor_application.cpp  editor_application.h  editor_core.cpp  editor_core.h  editor_entry.cpp
Source/Editor/LogWidget/: log_widget.cpp  log_widget.h
Source/Editor/MainWidget/: main_widget.cpp  main_widget.h
Source/Editor/PropertyWidget/: property_widget.cpp  property_widget.h
Source/Editor/Viewport/: editor_player_actor.cpp  editor_player_actor.h  viewport_widget.cpp  viewport_widget.h
Source/Engine/: CMakeLists.txt
Source/Engine/Application/: Application.cpp  ApplicationEntry.cpp  Widget.cpp  Window.cpp  app_entry.cpp  application.cpp  client_viewport.cpp  file_dialog.cpp  viewport.cpp  widget.cpp  window.cpp
Source/Engine/Core/: Logger.cpp  Volucris.cpp  Volucris.h  directory.cpp  logger.cpp  string_help.cpp  volucris.cpp  volucris.h
Source/Engine/Public/Engine/Application/: Application.h  Widget.h  Window.h  application.h  client_viewport.h  file_dialog.h  viewport.h  widget.h  window.h
Source/Engine/Public/Engine/Core/: CircleQueue.h  Logger.h  Logging.h  Object.h  VectorHelp.h  assert.h  circle_queue.h  directory.h  event.h  logger.h  logging.h  material_global.h  material_parameter_type.h  rect.h  serializer.h  shareable_object.h  size.h  string_help.h  texture.h  types_help.h  vector_help.h
Source/Engine/Public/Engine/Render/: ImGuiRenderer.h  Renderer.h
Source/Engine/Public/Engine/Renderer/: context.h  material_inner_data.h  material_parameter_description.h  material_proxy.h  mesh_proxy.h  mesh_render_data.h  pipeline.h  primitive_proxy.h  proxy_object.h  render_pass.h  render_target_proxy.h  renderer.h  scene_proxy.h  texture2d_proxy.h  viewport_proxy.h
Source/Engine/Public/Engine/Renderer/FRP/: forward_render_pass.h
Source/Engine/Public/Engine/Renderer/OpenGL/: ogl_buffer_object.h  ogl_check.h  ogl_frame_buffer_object.h  ogl_framebuffer_component.h  ogl_program_object.h  ogl_render_buffer_object.h  ogl_render_state.h  ogl_texture2d_object.h  ogl_uniform.h  ogl_vertex_array_object.h
Source/Engine/Public/Engine/Resource/: asset_header.h  asset_path.h  asset_reader.h  asset_writer.h  material.h  material_parameter.h  material_resource.h  mesh_loader.h  mesh_resource.h  mesh_resource_data.h  meta_data.h  render_resource.h  render_target.h  resource_manager.h  resource_object.h  resource_path.h  resource_registry.h  soft_object_ptr.h  static_mesh.h  texture2d.h
Source/Engine/Public/Engine/Scene/: actor.h  camera_component.h  component.h  direction_light_component.h  event_handler.h  input_component.h  level.h  player_actor.h  primitive_component.h  renderable_object.h  scene.h  scene_component.h  scene_object.h  static_mesh_component.h  view_client.h  viewport.h
Source/Engine/Render/: ImGuiRenderer.cpp
Source/Engine/Renderer/: context.cpp  material_proxy.cpp  mesh_proxy.cpp  mesh_render_data.cpp  primitive_proxy.cpp  proxy_object.cpp  render_target_proxy.cpp  renderer.cpp  scene_proxy.cpp  texture2d_proxy.cpp  viewport_proxy.cpp
Source/Engine/Renderer/FRP/: forward_render_pass.cpp
Source/Engine/Renderer/OpenGL/: ogl_buffer_object.cpp  ogl_frame_buffer_object.cpp  ogl_framebuffer_component.cpp  ogl_program_object.cpp  ogl_render_buffer_object.cpp  ogl_texture2d_object.cpp  ogl_uniform.cpp  ogl_vertex_array_object.cpp
Source/Engine/Resource/: asset_header.cpp  asset_path.cpp  asset_reader.cpp  asset_writer.cpp  material.cpp  material_parameter.cpp  material_resource.cpp  mesh_resource.cpp  mesh_resource_data.cpp  render_resource.cpp  render_target.cpp  resource_manager.cpp  resource_object.cpp  resource_path.cpp  resource_registry.cpp  static_mesh.cpp  texture2d.cpp
Source/Engine/Scene/: actor.cpp  camera_component.cpp  component.cpp  direction_light_component.cpp  event_handler.cpp  level.cpp  player_actor.cpp  primitive_component.cpp  scene.cpp  scene_component.cpp  scene_object.cpp  static_mesh_component.cpp  view_client.cpp  viewport.cpp
Source/Shader/: default_mesh.frag  default_mesh.vert  phone_standard.frag  phone_standard.vert
Test/: CMakeLists.txt
Test/ApplicationTest/: main.cpp
Test/CoreTest/: CMakeLists.txt  main.cpp  simple_pass.cpp  simple_pass.h
